Document PPDG/src/objects/Continue_Application__c.object
<CustomObject>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invalid_Attempt_Date__c</fullName>
        <label>Invalid Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Linked_Active_From__c</fullName>
        <label>Linked Active From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Continue Applications</relationshipLabel>
        <relationshipName>Continue_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(NOT(ISBLANK( Activated_Date__c )), &apos;Activated&apos;, 

IF( (NOW() - 2) &gt; Linked_Active_From__c, &apos;Expired&apos;, 

IF(NOT(ISBLANK(Invalid_Attempt_Date__c)), &apos;Invalid Attempt&apos;, &apos;Pending&apos;) 

) 


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <formula>&apos;https://march15-islamic-bank.cs87.force.com/CAA_Continue?id=&apos; + SessionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Url</label>
        <type>Text</type>
    </fields>
    <label>Continue Application</label>
    <nameField>
        <label>Continue Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continue Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>